--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,7 +2,7 @@ sonar.projectKey=achat-front
 sonar.projectVersion=1.0
 sonar.sourceEncoding=UTF-8
 
-sonar.sources=app
+sonar.sources=src/app
 
 sonar.exclusion=app/node_modules/*,/node_modules/*
 sonar.javascript.lcov.reportPaths=app/coverage/lcov.info
